Fix styling when location name is too long

--- a/components/TornadoEventListItem/TornadoEventListItem.module.css
+++ b/components/TornadoEventListItem/TornadoEventListItem.module.css
@@ -3,7 +3,6 @@
   padding: 1rem;
   cursor: pointer;
   transition: background-color 200ms ease-out;
-  white-space: nowrap;
 }
 
 .liSelected {
@@ -24,6 +23,18 @@
   justify-content: space-between;
   font-size: 1.5rem;
   font-weight: bold;
+}
+
+.locationName {
+  flex-grow: 1;
+  margin-right: 1rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.locationLength {
+  flex-shrink: 0;
 }
 
 .date {
